syntax = "proto3";
package pb;
import "common.proto";

//战令任务完成推送
message WarOrderTaskNtf{
	WarOrderTask task = 1;	//任务
	map<int32,WarOrderTask> weekTask = 2;	//第几周,任务
	int32 lv = 3;
	int32 exp = 4;
}

//战令任务打开
message WarOrderOpenReq{}
message WarOrderOpenAck{
	WarOrderTaskNtf warOrderInfo = 1;
}

//战令任务直接完成
message WarOrderTaskFinishReq{
	int32 taskId = 1;		//任务id
	int32 week	= 2;		//第几周
	bool isWeekTask = 3;	//是否是周任务
}
message WarOrderTaskFinishAck{
	int32 taskId = 1;		//任务id
	int32 week	= 2;		//第几周
	bool isWeekTask = 3;	//是否是周任务
}

//战令任务领取奖励
message WarOrderTaskRewardReq{
	int32 taskId = 1;		//任务id
	int32 week	= 2;		//第几周
	bool isWeekTask = 3;	//是否是周任务
}
message WarOrderTaskRewardAck{
	int32 taskId = 1;		//任务id
	int32 week	= 2;		//第几周
	bool isWeekTask = 3;	//是否是周任务
	int32 lv = 4;
	int32 exp = 5;
}

//购买豪华战令
message WarOrderBuyLuxuryReq{}
message WarOrderBuyLuxuryAck{
	bool isLuxury = 1;
}

//购买战令经验
message WarOrderBuyExpReq{}
message WarOrderBuyExpAck{
	int32 lv = 1;
	int32 exp = 2;
}

//领取战令等级奖励
message WarOrderLvRewardReq{
	int32 lv = 1;
}
message WarOrderLvRewardAck{
	int32 lv = 1;
	GoodsChangeNtf goods = 2;
}

//战令兑换
message WarOrderExchangeReq{
	int32 exchangeId = 1;	//warOrderExchange表序号(不是id)
	int32 num = 2;
}
message WarOrderExchangeAck{
	int32 exp = 1;
	int32 exchangeId = 2;
	int32 num = 3;
	GoodsChangeNtf goods = 4;
}

//战令经验、等级推送
message WarOrderLvNtf{
	int32 lv = 1;
	int32 exp = 2;
}

//战令重置
message WarOrderResetNtf{
  WarOrder warOrder	= 1;
}
